# opencv_object_tracking

./: README.md
haartraining_turtle/: README.md  auto_haartraining.sh  build.detect  convert_cascade  createsamples  createtestsamples.pl  haarcascade-inter.xml  mergevec  turtledetect  turtledetect.c
haartraining_turtle/haartraining/: mergevec.cpp
template_tracking_project_solution/: CMakeLists.txt  README.md  cmake_clean  objectTrackingInfo.txt  templateTrack  template_track.cpp
track_object_project/: README.md
tutorials/captureFrames/: CMakeLists.txt  captureFrames.cpp
tutorials/detect_contours/: CMakeLists.txt  cmake_clean  detect_contours.cpp
tutorials/first_opencv_project/: CMakeLists.txt  main.cpp  runOpenCV
tutorials/histogram_tutorial_opencv/: CMakeLists.txt  histogramTut  histogram_tut.cpp
tutorials/objectTrackingTutorial/: .#object_tracking.cpp  CMakeLists.txt  cmake_clean  make_prj  object_tracking.cpp
tutorials/tracking_object_from_video/: CMakeLists.txt  cmake_clean  track_object_color.cpp
tutorials/tracking_using_contours/: CMakeLists.txt  cmake_clean  tracking_u_contours.cpp
