cmake_minimum_required(VERSION 2.8)
project( objectTracking )
FIND_LIBRARY(CARBON_LIBRARY Carbon)
find_package( OpenCV REQUIRED )
MARK_AS_ADVANCED(CARBON_LIBRARY)
SET(EXTRA_LIBS ${CARBON_LIBRARi})		
get_filename_component( FRAMEWORK_DIR ${CARBON_LIBRARY} PATH )
get_filename_component( FRAMEWORK_NAME ${CARBON_LIBRARY} NAME_WE )
add_executable( track_contour tracking_u_contours.cpp )
target_link_libraries( track_contour ${OpenCV_LIBS})
